CA-1 Add global build script
Supports handling multiple Tasks
Will read per solution task build file
Added validation for Message object and corresponding unit test
verifying the validation

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,5 @@ stages:
         steps:
         - task: PowerShell@2
           inputs:
-            workingDirectory: './CloudAuditionApi'
-            script: dotnet build
+            filePath: ./build.ps1
+            arguments: -Task 'Build'
