--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ stages:
     displayName: 'Build Components'
     jobs:
       - job: BuildCloudAuditionApi
+        displayName: 'Build CloudAuditionApi'
         pool:
           vmImage: $(vmImageName)
 
@@ -23,9 +24,10 @@ stages:
             arguments: -Task 'Build' -Project CloudAuditionApi
 
   - stage: UnitTest
-    displayName: 'Unit Test Components'
+    displayName: 'UnitTest Components'
     jobs:
       - job: UnitTestCloudAuditionApi
+        displayName: 'UnitTest CloudAuditionApi'
         pool:
           vmImage: $(vmImageName)
 
