CA-8 Switch pipeline to run using docker-compose

--- a/CloudAuditionApi/Dockerfile
+++ b/CloudAuditionApi/Dockerfile
@@ -2,11 +2,11 @@ FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build-env
 
 WORKDIR /app
 
-COPY ./*.csproj ./
+COPY ./CloudAuditionApi/*.csproj ./
 
 RUN dotnet restore
 
-COPY . ./
+COPY ./CloudAuditionApi/ ./
 
 RUN dotnet publish -c Release -o out
 
