--- a/CloudAuditionApi/docker-compose.ci.yml
+++ b/CloudAuditionApi/docker-compose.ci.yml
@@ -1,10 +1,32 @@
 version: '3.4'
 
 services:
-  cloud_audition_api:
+  api:
     build:
       context: .
       dockerfile: ./Dockerfile.ci
     image: cloud_audition_api
     ports:
       - "8000:80"
+    depends_on:
+      - db
+    networks:
+      - api_backend
+
+  db:
+    image: postgres:11.5
+    restart: always
+    volumes:
+      - api_db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
+    networks:
+      - api_backend
+
+networks:
+  api_backend:
+
+volumes:
+  api_db:
