CA-5 Add first integration test
Load postgres cred and db name from env
Add env mapping for secrets in azure devops
Fix build steps

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,22 @@ stages:
           inputs:
             filePath: ./build.ps1
             arguments: -Task 'UnitTest' -Project CloudAuditionApi
+
+  - stage: IntegrationTest
+    displayName: 'IntegrationTest Components'
+    jobs:
+      - job: IntegrationTestCloudAuditionApi
+        displayName: 'IntegrationTest CloudAuditionApi'
+        pool:
+          vmImage: $(vmImageName)
+
+        steps:
+        - task: PowerShell@2
+          inputs:
+            filePath: ./build.ps1
+            arguments: -Task 'IntegrationTest' -Project CloudAuditionApi
+          env:
+            POSTGRES_USER: $(POSTGRES_USER)
+            POSTGRES_PASSWORD: $(POSTGRES_PASSWORD)
+            POSTGRES_DB: $(POSTGRES_DB)
+          
