--- a/CloudAuditionApi/docker-compose.ci.yml
+++ b/CloudAuditionApi/docker-compose.ci.yml
@@ -5,9 +5,13 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.ci
-    image: cloud_audition_api
+    image: cloudauditionapi
     ports:
       - "8000:80"
+    environment:
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
     depends_on:
       - db
     networks:
