--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,4 +54,20 @@ stages:
             POSTGRES_USER: $(POSTGRES_USER)
             POSTGRES_PASSWORD: $(POSTGRES_PASSWORD)
             POSTGRES_DB: $(POSTGRES_DB)
-          
+
+  - stage: Publish
+    displayName: 'Publish Components'
+    jobs:
+      - job: PublishCloudAuditionApi
+        displayName: 'Publish CloudAuditionApi'
+        pool:
+          vmImage: $(vmImageName)
+
+        steps:
+        - task: PowerShell@2
+          inputs:
+            filePath: ./build.ps1
+            arguments: -Task 'Publish' -Project CloudAuditionApi
+          env:
+            DOCKER_ID: $(DOCKER_ID)
+            DOCKER_PASSWORD: $(DOCKER_PASSWORD)
